--- a/_zBronzeTraining/Bronze_Metal_ArkETF_Bot.ipynb
+++ b/_zBronzeTraining/Bronze_Metal_ArkETF_Bot.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = \"PK17F7RELAQZCQDXZDRR\"\n",
-    "API_SECRET = \"eX4KGWMaBHRs6i5rDljhrtNxZHkLzbm3n97LxRdL\"\n",
+    "API_KEY = \"PKNHA1NW9CF8I8TPR357\"\n",
+    "API_SECRET = \"b0CW07x7OJSiqLqUaPIOuwnlnti4k6uFbOnpPN1s\"\n",
     "API_BASE_URL = 'https://paper-api.alpaca.markets'\n",
     "data_url = 'wss://data.alpaca.markets'"
    ]
@@ -31,15 +31,15 @@
     "\n",
     "from finrl.meta.env_stock_trading.env_stocktrading_np import StockTradingEnv\n",
     "from finrl.meta.env_stock_trading.env_stock_papertrading import AlpacaPaperTrading\n",
-    "from finrl.meta.data_processor import DataProcessor\n",
+    "from finrl.meta.data_processor import DataProcessor  #need to figure out the requirements of data processor!  how can we use a SQL DB instead.\n",
     "from finrl.plot import backtest_stats, backtest_plot, get_daily_return, get_baseline\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from typing import Tuple\n",
-    "from typing import List\n",
-    "from typing import Union\n",
+    "# from typing import Tuple\n",
+    "# from typing import List\n",
+    "# from typing import Union\n",
     "\n",
     "import os\n",
     "import time\n",
@@ -119,31 +119,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'datetime' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m#Set all date ranges for training and testing:\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39m#initial train\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m TrainSd \u001b[39m=\u001b[39m datetime\u001b[39m.\u001b[39mnow()\u001b[39m+\u001b[39mtimedelta(days\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m90\u001b[39m);\n\u001b[0;32m      4\u001b[0m TrainSd \u001b[39m=\u001b[39m TrainSd\u001b[39m.\u001b[39mstrftime(\u001b[39m'\u001b[39m\u001b[39m%\u001b[39m\u001b[39mY-\u001b[39m\u001b[39m%\u001b[39m\u001b[39mm-\u001b[39m\u001b[39m%d\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[39m#print(sd)\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'datetime' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# #Set all date ranges for training and testing:\n",
-    "# #initial train\n",
-    "# TrainSd = datetime.now()+timedelta(days=-90);\n",
-    "# TrainSd = TrainSd.strftime('%Y-%m-%d')\n",
-    "# #print(sd)\n",
-    "# TrainEd = datetime.now()+timedelta(days=-22);\n",
-    "# TrainEd = TrainEd.strftime('%Y-%m-%d')\n",
+    "#Set all date ranges for training and testing:\n",
+    "#initial train\n",
+    "TrainSd = datetime.now()+timedelta(days=-90);\n",
+    "TrainSd = TrainSd.strftime('%Y-%m-%d')\n",
+    "#print(sd)\n",
+    "TrainEd = datetime.now()+timedelta(days=-22);\n",
+    "TrainEd = TrainEd.strftime('%Y-%m-%d')\n",
     "\n",
-    "# #Test\n",
-    "# TestSd = datetime.now()+timedelta(days=-10);\n",
-    "# TestSd = TestSd.strftime('%Y-%m-%d')\n",
-    "# #print(sd)\n",
-    "# TestEd = datetime.now()+timedelta(days=-1);\n",
-    "# TestEd = TestEd.strftime('%Y-%m-%d');\n",
+    "#Test\n",
+    "TestSd = datetime.now()+timedelta(days=-10);\n",
+    "TestSd = TestSd.strftime('%Y-%m-%d')\n",
+    "#print(sd)\n",
+    "TestEd = datetime.now()+timedelta(days=-1);\n",
+    "TestEd = TestEd.strftime('%Y-%m-%d');\n",
     "\n",
-    "# #Final Training\n",
-    "# FullSd = datetime.now()+timedelta(days=-90);\n",
-    "# FullSd = FullSd.strftime('%Y-%m-%d')\n",
-    "# #print(sd)\n",
-    "# FullEd = datetime.now()+timedelta(days=-1);\n",
-    "# FullEd = FullEd.strftime('%Y-%m-%d');"
+    "#Final Training\n",
+    "FullSd = datetime.now()+timedelta(days=-90);\n",
+    "FullSd = FullSd.strftime('%Y-%m-%d')\n",
+    "#print(sd)\n",
+    "FullEd = datetime.now()+timedelta(days=-1);\n",
+    "FullEd = FullEd.strftime('%Y-%m-%d');"
    ]
   },
   {
@@ -934,12 +946,12 @@
    "source": [
     "#Make sure the gammas are the same in all 3 places\n",
     "#Make sure you update the gamma on each training session on each training episode!  \n",
-    "ERL_PARAMS = {\"learning_rate\": 0.3,\"batch_size\": 2048,\"gamma\":  0.92,\n",
+    "ERL_PARAMS = {\"learning_rate\": 0.003,\"batch_size\": 2048,\"gamma\":  0.92,\n",
     "        \"seed\":312,\"net_dimension\":[128,64,32,16,8,4], \"target_step\":30000, \"eval_gap\":30,  #the net dimension needs to match the config values\n",
     "        \"eval_times\":1} \n",
     "env = StockTradingEnv\n",
     "\n",
-    "#LETS CHECK THESE VALUES!!! \n",
+    "#PEEK VALUES!!! \n",
     "# env = StockTradingEnv(config=my_config)\n",
     "# min_stock_rate = env.min_stock_rate\n",
     "# max_stock = env.max_stock\n",
@@ -949,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,71 +975,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alpaca successfully connected\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gregs\\anaconda3\\envs\\BronzeTrainEnv\\lib\\site-packages\\finrl\\meta\\data_processors\\processor_alpaca.py:52: FutureWarning: Timedelta.delta is deprecated and will be removed in a future version.\n",
-      "  if pd.Timedelta(time_interval).delta < day_delta:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The price of the first row for ticker  ARKF  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  ARKG  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  IAU  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  PLTM  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  SDS  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  SLV  is NaN.  It will filled with the first valid price.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gregs\\anaconda3\\envs\\BronzeTrainEnv\\lib\\site-packages\\finrl\\meta\\data_processors\\processor_alpaca.py:52: FutureWarning: Timedelta.delta is deprecated and will be removed in a future version.\n",
-      "  if pd.Timedelta(time_interval).delta < day_delta:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The price of the first row for ticker  VIXY  is NaN.  It will filled with the first valid price.\n",
-      "\n",
-      "| `step`: Number of samples, or total training steps, or running times of `env.step()`.\n",
-      "| `time`: Time spent from the start of training to this moment.\n",
-      "| `avgR`: Average value of cumulative rewards, which is the sum of rewards in an episode.\n",
-      "| `stdR`: Standard dev of cumulative rewards, which is the sum of rewards in an episode.\n",
-      "| `avgS`: Average of steps in an episode.\n",
-      "| `objC`: Objective of Critic network. Or call it loss function of critic network.\n",
-      "| `objA`: Objective of Actor network. It is the average Q value of the critic network.\n",
-      "|     step      time  |     avgR    stdR    avgS  |     objC      objA\n",
-      "| 2.00e+04        15  |    -0.48    0.00   12345  |     0.01      0.21\n",
-      "| 4.00e+04        30  |    -0.47    0.00   12345  |     0.11      0.30\n",
-      "| 6.00e+04        44  |    -0.48    0.00   12345  |     0.05      0.44\n",
-      "| 8.00e+04        59  |    -0.49    0.00   12345  |     0.08      0.61\n",
-      "| 1.00e+05        74  |    -0.50    0.00   12345  |     0.00      0.77\n",
-      "| 1.20e+05        89  |    -0.49    0.00   12345  |     0.01      0.92\n",
-      "| 1.40e+05       104  |    -0.50    0.00   12345  |     0.01      1.07\n",
-      "| 1.60e+05       119  |    -0.49    0.00   12345  |     0.02      1.15\n",
-      "| 1.80e+05       133  |    -0.47    0.00   12345  |     0.07      1.30\n",
-      "| 2.00e+05       148  |    -0.47    0.00   12345  |     0.00      1.55\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test set training\n",
     "train(start_date = TrainSd, \n",
@@ -1050,12 +1000,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Test\n",
-    "TestSd = datetime.now()+timedelta(days=-30);\n",
+    "TestSd = datetime.now()+timedelta(days=-20);\n",
     "TestSd = TestSd.strftime('%Y-%m-%d') \n",
     "\n",
     "#print(sd)\n",
@@ -1065,70 +1015,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alpaca successfully connected\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gregs\\anaconda3\\envs\\BronzeTrainEnv\\lib\\site-packages\\finrl\\meta\\data_processors\\processor_alpaca.py:52: FutureWarning: Timedelta.delta is deprecated and will be removed in a future version.\n",
-      "  if pd.Timedelta(time_interval).delta < day_delta:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The price of the first row for ticker  ARKF  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  ARKG  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  IAU  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  PLTM  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  SDS  is NaN.  It will filled with the first valid price.\n",
-      "The price of the first row for ticker  SLV  is NaN.  It will filled with the first valid price.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gregs\\anaconda3\\envs\\BronzeTrainEnv\\lib\\site-packages\\finrl\\meta\\data_processors\\processor_alpaca.py:52: FutureWarning: Timedelta.delta is deprecated and will be removed in a future version.\n",
-      "  if pd.Timedelta(time_interval).delta < day_delta:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The price of the first row for ticker  VIXY  is NaN.  It will filled with the first valid price.\n",
-      "price_array:  8210\n",
-      "| load actor from: ./papertrading_erl/actor.pth\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_9272\\2192916491.py:106: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
-      "  s_tensor = _torch.as_tensor((state,), device=device)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Finished!\n",
-      "episode_return 0.9990010394209596\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Test\n",
     "# 2/28/2023 it returned 1.68 on the last 90 days.\n",
@@ -1187,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1537,27 +1426,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "state_dim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "action_dim"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| load actor from: ./papertrading_erl/actor.pth\n",
+      "Waiting for market to open...\n",
+      "Market opened.\n",
+      "6\n",
+      "Quantity is 0, order of | 0 SLV sell | not completed.\n",
+      "Quantity is 0, order of | 0 PLTM sell | not completed.\n",
+      "Quantity is 0, order of | 0 IAU buy | not completed.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_12772\\3706435463.py:151: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
+      "  s_tensor = torch.as_tensor((state,), device=self.device)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quantity is 0, order of | 0 ARKG buy | not completed.\n",
+      "Quantity is 0, order of | 0 ARKF buy | not completed.\n",
+      "Quantity is 0, order of | 0 SDS buy | not completed.\n"
+     ]
+    }
+   ],
    "source": [
     "#Run bot\n",
     "paper_trading_erl = AlpacaPaperTrading(ticker_list = ticker_list, \n",
@@ -1579,6 +1521,13 @@
     "                                                       \n",
     "paper_trading_erl.run()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
