--- a/_zBronzeTraining/Bronze_WorkBench.ipynb
+++ b/_zBronzeTraining/Bronze_WorkBench.ipynb
@@ -23,20 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gregs\\anaconda3\\envs\\BronzeTrainEnv\\lib\\site-packages\\pyfolio\\pos.py:26: UserWarning: Module \"zipline.assets\" not found; multipliers will not be applied to position notionals.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
+    "\n",
+    "import importlib;\n",
+    "import finrl;\n",
     "\n",
     "from finrl.meta.env_stock_trading.env_stocktrading_np import StockTradingEnv\n",
     "from finrl.meta.env_stock_trading.env_stock_papertrading import AlpacaPaperTrading\n",
@@ -45,6 +39,9 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "import datetime as dt\n",
+    "from datetime import timedelta\n",
     "\n",
     "import os\n",
     "import time\n",
@@ -55,7 +52,9 @@
     "import torch.nn as nn\n",
     "from copy import deepcopy\n",
     "from torch import Tensor\n",
-    "from torch.distributions.normal import Normal\n"
+    "from torch.distributions.normal import Normal\n",
+    "\n",
+    "import pyodbc;\n"
    ]
   },
   {
@@ -75,19 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import importlib;\n",
-    "import finrl;\n",
-    "\n",
     "importlib.reload(finrl.config);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,17 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Initialize the first value of each of these arrays\n",
     "\n",
@@ -131,7 +119,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Connect to SQL DB\n",
+    "server = 'BANANNA51'\n",
+    "database = 'alpacahistory'\n",
+    "username = 'gregs138'\n",
+    "password = '1000.Bats'\n",
+    "\n",
+    "conn_str = f\"DRIVER={{ODBC Driver 17 for SQL Server}};SERVER={server};DATABASE={database};UID={username};PWD={password}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = pyodbc.connect(conn_str)\n",
+    "cursor = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_39320\\1292229789.py:2: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql_query(query, conn)\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = 'SELECT * FROM EvaluationResults'\n",
+    "df = pd.read_sql_query(query, conn)\n",
+    "# SQLAlchemy\n",
+    "#df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cursor.execute('SELECT * FROM EvaluationResults')\n",
+    "# rows = cursor.fetchall()\n",
+    "# for row in rows:\n",
+    "#     print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,31 +225,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Set all date ranges for training and testing:\n",
     "#just modify the days= number to whatever your want.\n",
     "#initial train\n",
-    "TrainSd = datetime.now()+timedelta(days=-90);\n",
+    "TrainSd = dt.datetime.now()+timedelta(days=-90);\n",
     "TrainSd = TrainSd.strftime('%Y-%m-%d')\n",
     "#print(sd)\n",
-    "TrainEd = datetime.now()+timedelta(days=-22);\n",
+    "TrainEd = dt.datetime.now()+timedelta(days=-22);\n",
     "TrainEd = TrainEd.strftime('%Y-%m-%d')\n",
     "\n",
     "#Test\n",
-    "TestSd = datetime.now()+timedelta(days=-10);\n",
+    "TestSd = dt.datetime.now()+timedelta(days=-10);\n",
     "TestSd = TestSd.strftime('%Y-%m-%d')\n",
     "#print(sd)\n",
-    "TestEd = datetime.now()+timedelta(days=-1);\n",
+    "TestEd = dt.datetime.now()+timedelta(days=-1);\n",
     "TestEd = TestEd.strftime('%Y-%m-%d');\n",
     "\n",
     "#Final Training\n",
-    "FullSd = datetime.now()+timedelta(days=-90);\n",
+    "FullSd = dt.datetime.now()+timedelta(days=-90);\n",
     "FullSd = FullSd.strftime('%Y-%m-%d')\n",
     "#print(sd)\n",
-    "FullEd = datetime.now()+timedelta(days=-1);\n",
+    "FullEd = dt.datetime.now()+timedelta(days=-1);\n",
     "FullEd = FullEd.strftime('%Y-%m-%d');"
    ]
   },
