--- a/_Goldbots/RunGoldBot_1.14_over10days.ipynb
+++ b/_Goldbots/RunGoldBot_1.14_over10days.ipynb
@@ -1200,7 +1200,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-03 07:07:01,995 - DEBUG - Starting new HTTPS connection (1): api.alpaca.markets:443\n"
+      "2023-05-18 12:23:43,311 - DEBUG - Starting new HTTPS connection (1): api.alpaca.markets:443\n"
      ]
     },
     {
@@ -1214,9 +1214,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-03 07:07:02,354 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/orders?status=open HTTP/1.1\" 200 2\n",
-      "2023-05-03 07:07:02,447 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/clock HTTP/1.1\" 200 146\n",
-      "2023-05-03 07:07:02,450 - DEBUG - Starting new HTTPS connection (1): data.alpaca.markets:443\n"
+      "2023-05-18 12:23:43,712 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/orders?status=open HTTP/1.1\" 200 2\n",
+      "2023-05-18 12:23:43,801 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/clock HTTP/1.1\" 200 147\n",
+      "2023-05-18 12:23:43,805 - DEBUG - Starting new HTTPS connection (1): data.alpaca.markets:443\n"
      ]
     },
     {
@@ -1231,23 +1231,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-03 07:07:02,758 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=DBX HTTP/1.1\" 200 146\n",
-      "2023-05-03 07:07:02,859 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=EC HTTP/1.1\" 200 None\n",
-      "2023-05-03 07:07:02,956 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=VFC HTTP/1.1\" 200 None\n",
-      "2023-05-03 07:07:03,054 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=SBGI HTTP/1.1\" 200 241\n",
-      "2023-05-03 07:07:03,154 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=TGNA HTTP/1.1\" 200 145\n",
-      "2023-05-03 07:07:03,255 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=APLE HTTP/1.1\" 200 235\n",
-      "2023-05-03 07:07:03,352 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=XRX HTTP/1.1\" 200 143\n",
-      "2023-05-03 07:07:03,450 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=RIG HTTP/1.1\" 200 None\n",
-      "2023-05-03 07:07:03,549 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=AGNC HTTP/1.1\" 200 None\n",
-      "2023-05-03 07:07:03,648 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=GME HTTP/1.1\" 200 None\n",
-      "2023-05-03 07:07:03,746 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=BB HTTP/1.1\" 200 None\n",
-      "2023-05-03 07:07:05,749 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=1&symbols=VIXY HTTP/1.1\" 200 186\n",
-      "2023-05-03 07:07:05,842 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/positions HTTP/1.1\" 200 None\n",
-      "2023-05-03 07:07:05,941 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 915\n",
-      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_4732\\188388328.py:158: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
+      "2023-05-18 12:23:44,127 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=DBX HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:44,233 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=EC HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:44,336 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=VFC HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:44,439 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=SBGI HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:44,541 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=TGNA HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:44,647 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=APLE HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:44,763 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=XRX HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:44,868 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=RIG HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:44,972 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=AGNC HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:45,077 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=GME HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:45,181 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=100&symbols=BB HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:49,227 - DEBUG - https://data.alpaca.markets:443 \"GET /v2/stocks/bars?timeframe=1H&adjustment=raw&limit=1&symbols=VIXY HTTP/1.1\" 200 187\n",
+      "2023-05-18 12:23:49,321 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/positions HTTP/1.1\" 200 998\n",
+      "2023-05-18 12:23:49,416 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 None\n",
+      "C:\\Users\\gregs\\AppData\\Local\\Temp\\ipykernel_37296\\188388328.py:158: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\torch\\csrc\\utils\\tensor_new.cpp:233.)\n",
       "  s_tensor = torch.as_tensor((state,), device=self.device)\n",
-      "2023-05-03 07:07:06,038 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 915\n"
+      "2023-05-18 12:23:49,529 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 None\n"
      ]
     },
     {
@@ -1263,48 +1263,76 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-03 07:07:06,135 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 915\n",
-      "2023-05-03 07:07:06,231 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 915\n",
-      "2023-05-03 07:07:06,326 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 915\n"
+      "2023-05-18 12:23:49,622 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:49,716 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:49,814 - DEBUG - https://api.alpaca.markets:443 \"POST /v2/orders HTTP/1.1\" 200 791\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quantity is 0, order of | 0 GME sell | not completed.\n",
-      "Quantity is 0, order of | 0 APLE buy | not completed.\n"
+      "Quantity is 0, order of | 0 GME sell | not completed.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-03 07:07:06,424 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 915\n",
-      "2023-05-03 07:07:06,520 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 915\n"
+      "2023-05-18 12:23:49,909 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:50,007 - DEBUG - https://api.alpaca.markets:443 \"POST /v2/orders HTTP/1.1\" 200 790\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quantity is 0, order of | 0 XRX buy | not completed.\n",
-      "Quantity is 0, order of | 0 AGNC buy | not completed.\n"
+      "Market order of | 19 APLE buy | completed.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-03 07:07:06,616 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 915\n",
-      "2023-05-03 07:07:06,710 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 915\n"
+      "2023-05-18 12:23:50,102 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:50,198 - DEBUG - https://api.alpaca.markets:443 \"POST /v2/orders HTTP/1.1\" 200 791\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quantity is 0, order of | 0 BB buy | not completed.\n"
+      "Market order of | 13 XRX buy | completed.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-18 12:23:50,292 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:50,387 - DEBUG - https://api.alpaca.markets:443 \"POST /v2/orders HTTP/1.1\" 200 789\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Market order of | 17 AGNC buy | completed.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-18 12:23:50,482 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 None\n",
+      "2023-05-18 12:23:50,578 - DEBUG - https://api.alpaca.markets:443 \"GET /v2/account HTTP/1.1\" 200 None\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Market order of | 11 BB buy | completed.\n"
      ]
     }
    ],
